add_custom_library(Sim_Types)

add_custom_library(Sim_Buffers)
target_link_libraries(Sim_Buffers PUBLIC Sim_Types Buffer_Utils Graph Validation)
add_custom_library(Sim_Write)
add_custom_library(Sim_Infection_Sampling)
target_link_libraries(Sim_Infection_Sampling PUBLIC Buffer_Utils)
add_custom_library(State_Accumulation)
target_link_libraries(State_Accumulation PUBLIC Validation Buffer_Utils)

add_custom_library(Simulation)
target_link_libraries(Simulation PUBLIC Sim_Buffers Dynamics Sim_Infection_Sampling Sim_Write String_Manipulation math State_Accumulation)

add_custom_library(Multiple_Simulation)
target_link_libraries(Multiple_Simulation PUBLIC Sim_Buffers Dynamics Sim_Infection_Sampling Sim_Write String_Manipulation math State_Accumulation)
