add_custom_library(Sim_Buffers)
target_link_libraries(Sim_Buffers PUBLIC Graph_Types Validation)
target_link_libraries(Sim_Buffers PUBLIC Buffer_Utils Graph Dataframe Database Community_Mappings)
add_custom_library(Sim_Infection_Sampling)
target_link_libraries(Sim_Infection_Sampling PUBLIC Buffer_Utils)
add_custom_library(State_Accumulation)
target_link_libraries(State_Accumulation PUBLIC Validation Buffer_Utils)
add_custom_library(Simulation)
target_link_libraries(Simulation PUBLIC Sim_Buffers Dynamics Sim_Infection_Sampling String_Manipulation math State_Accumulation)
