add_library(Sim_Types STATIC Sim_Types.cpp)
target_include_directories(Sim_Types PUBLIC ${SYCL_GRAPH_INCLUDE_DIR})
target_link_libraries(Sim_Types PUBLIC Complete_Graph)

add_custom_library(Sim_Buffers)
target_link_libraries(Sim_Buffers PUBLIC pqxx Sim_Types Graph_Types Graph Dataframe Buffer_Utils Database Community_Mappings Validation)
add_custom_library(Sim_Infection_Sampling)
target_link_libraries(Sim_Infection_Sampling PUBLIC Buffer_Utils Dataframe)
add_custom_library(State_Accumulation)
target_link_libraries(State_Accumulation PUBLIC Validation Buffer_Utils)
add_custom_library(Simulation)
target_link_libraries(Simulation PUBLIC Sim_Buffers SIR_Dynamics Sim_Infection_Sampling String_Manipulation math State_Accumulation)
