# add_library(FROLS_Regression_JIT STATIC FROLS_Regression_JIT.hpp FROLS_Regression_JIT.cpp)
# target_include_directories(FROLS_Regression_JIT PUBLIC ${FROLS_INCLUDE_DIRS})
# target_link_libraries(FROLS_Regression_JIT PUBLIC Eigen3::Eigen FROLS_DataFrame FROLS_Features cppitertools::cppitertools casadi)
