add_library(Graph INTERFACE)
target_link_libraries(Graph INTERFACE Common)
target_include_directories(Graph INTERFACE ${SYCL_GRAPH_INCLUDE_DIRS})
file(GLOB_RECURSE GRAPH_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
if (${ENABLE_PRECOMPILED_HEADERS})
    target_precompile_headers(Graph INTERFACE ${GRAPH_HEADER_FILES} REUSE_FROM Common)
endif()